<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:dividerPadding="20dp"
    android:background="@drawable/rounded_shadow_background"
    android:layout_margin="20dp"> <!-- Added margin -->

    <!-- com.example.aegishub2.Truck Name -->
    <TextView
        android:id="@+id/truck_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/truck_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"/>

    <!-- com.example.aegishub2.Truck Details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- com.example.aegishub2.Truck Icon -->
        <ImageView
            android:id="@+id/truck_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/jac_coffee"
            android:contentDescription="@string/description"
            android:layout_marginEnd="16dp"/>

        <!-- com.example.aegishub2.Truck Specifications -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/truck_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/truck_model"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/truck_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/truck_capacity"
                android:textColor="#8D6E63"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/truck_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/truck_status"
                android:textColor="#8D6E63"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
