<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- RecyclerView to display trucks -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_trucks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_shadow_background"
        android:padding="8dp"/>

    <!-- CardView for origin, destination, and navigate button -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/rounded_corner_shadow"> <!-- Updated background -->

            <!-- Origin Input -->
            <EditText
                android:id="@+id/origin_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="origin"
                android:background="@drawable/rounded_corner_shadow"
                android:hint="@string/your_origin"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#263238"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Destination Input -->
            <EditText
                android:id="@+id/destination_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:autofillHints="destination"
                android:background="@drawable/rounded_corner_shadow"
                android:hint="@string/your_destination"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#263238"
                tools:ignore="VisualLintTextFieldSize" />

            <!-- Navigate Button -->
            <Button
                android:id="@+id/navigate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waze"
                android:background="@drawable/rounded_corner_shadow"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingVertical="16dp"
                android:layout_marginTop="8dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Bottom Navigation as Footer -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="395dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@null"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation_menu_map" />

</LinearLayout>
